[tool.poetry]
name = "dalle-clip-bias"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
ftfy = "^6.0.3"
regex = "^2021.8.28"
tqdm = "^4.62.2"
omegaconf = "^2.1.1"
torch = "^1.9.0"
torchvision = "^0.10.0"
pytorch-lightning = "^1.4.5"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"
scipy = "^1.7.1"
transformers = "^4.10.0"
Flask = "^2.0.1"
kornia = "^0.5.10"
imageio-ffmpeg = "^0.4.5"
einops = "^0.3.2"
imageio = "^2.9.0"
torch-optimizer = "^0.1.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-mock = "^3.6.1"
xdoctest = "^0.15.8"
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
darglint = "^1.8.0"
black = "^21.8b0"
isort = "^5.9.3"
seed-isort-config = "^2.2.0"
pre-commit = "^2.15.0"
wheel = "^0.37.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
